--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ENERGY=20 GeV
 
-spring.datasource.url=postgres:// ec2-18-215-111-67.compute-1.amazonaws.com:5432/db4f0o4knrueov
+spring.datasource.url=jdbc:postgresql://ec2-18-215-111-67.compute-1.amazonaws.com:5432/db4f0o4knrueov
 
 spring.datasource.username=fgftmfttkjinyu
 
