--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ENERGY=20 GeV
 
-JDBC_DATABASE_URL=jdbc:postgresql://ec2-18-215-111-67.compute-1.amazonaws.com:5432/db4f0o4knrueov
+JDBC_DATABASE_URL=JDBC:postgresql://ec2-18-215-111-67.compute-1.amazonaws.com:5432/db4f0o4knrueov
 
 JDBC_DATABASE_USERNAME=fgftmfttkjinyu
 
